[tool.poetry]
name = "bitget"
version = "0.1.0"
description = "Bitget SDK V3"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# Add any other dependencies the package might have

[tool.poetry.package]
include = ["bitget/**/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"